[gd_scene load_steps=10 format=3 uid="uid://dqt8fnt1l33eu"]

[ext_resource type="Script" uid="uid://dshitaaapbs6x" path="res://source/client/ui/hud/hud.gd" id="1_rchld"]
[ext_resource type="PackedScene" uid="uid://rncsatpcsbm" path="res://source/client/ui/hud/health_bar/health_bar.tscn" id="2_klco5"]
[ext_resource type="PackedScene" uid="uid://cmv168mgurrlp" path="res://source/client/ui/menus/chat/chat_menu.tscn" id="2_xs74v"]
[ext_resource type="Script" uid="uid://pkprr0ll1y44" path="res://source/client/ui/hud/item_slots.gd" id="4_8qpw0"]
[ext_resource type="Script" uid="uid://brq8mxox5bclj" path="res://source/client/ui/hud/menu_overlay.gd" id="4_cx7qp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8qpw0"]
bg_color = Color(0.215902, 0.215902, 0.215902, 0.203922)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.0646966, 0.0646965, 0.0646965, 1)
border_blend = true
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yow4d"]
bg_color = Color(0.421725, 0.311275, 0.859316, 0.627451)
border_color = Color(0.0646966, 0.0646965, 0.0646965, 1)
border_blend = true
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_popxh"]
bg_color = Color(0.215902, 0.215902, 0.215902, 0.203922)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.0646966, 0.0646965, 0.0646965, 1)
border_blend = true
corner_radius_top_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ia7hj"]
bg_color = Color(0.0966887, 0.423688, 0.799925, 0.627451)
border_color = Color(0.0646966, 0.0646965, 0.0646965, 1)
border_blend = true
corner_radius_top_right = 20
corner_radius_bottom_left = 20

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_rchld")

[node name="Chat" parent="." instance=ExtResource("2_xs74v")]
layout_mode = 1
metadata/_edit_lock_ = true

[node name="ItemSlots" type="Control" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("4_8qpw0")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="ItemSlots"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -57.0
offset_right = -10.0
offset_bottom = 57.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ItemSlotButton1" type="Button" parent="ItemSlots/VBoxContainer"]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2
theme_override_constants/icon_max_width = 64
text = "1"
icon_alignment = 1

[node name="ItemSlotButton2" type="Button" parent="ItemSlots/VBoxContainer"]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2
theme_override_constants/icon_max_width = 64
text = "2
"
icon_alignment = 1

[node name="Resources" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_lock_ = true

[node name="HealthBar" parent="Resources" instance=ExtResource("2_klco5")]
layout_mode = 1
metadata/_edit_lock_ = true

[node name="ExperienceBar" type="ProgressBar" parent="Resources"]
custom_minimum_size = Vector2(200, 5)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -146.0
offset_top = -16.0
offset_right = 154.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_8qpw0")
theme_override_styles/fill = SubResource("StyleBoxFlat_yow4d")
step = 0.5
value = 66.0
allow_greater = true
show_percentage = false
metadata/_edit_group_ = true

[node name="ResourceBar" type="ProgressBar" parent="Resources"]
custom_minimum_size = Vector2(200, 5)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -51.0
offset_right = 100.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_popxh")
theme_override_styles/fill = SubResource("StyleBoxFlat_ia7hj")
max_value = 40.0
step = 0.5
value = 40.0
allow_greater = true
show_percentage = false
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="Resources/ResourceBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.5
offset_top = -10.5
offset_right = 23.5
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
text = "40/40"

[node name="ProgressBar" type="ProgressBar" parent="Resources"]
layout_mode = 0
offset_left = 122.0
offset_top = -11.0
offset_right = 172.0
offset_bottom = 21.0
show_percentage = false

[node name="ProgressBar2" type="ProgressBar" parent="Resources"]
layout_mode = 0
offset_left = -126.0
offset_top = -12.0
offset_right = -83.0
offset_bottom = 20.0
show_percentage = false

[node name="MenuButtons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MenuButtons"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -118.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 62.0
grow_horizontal = 0
alignment = 2

[node name="NotificationButton" type="Button" parent="MenuButtons/HBoxContainer"]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "!"
metadata/_edit_lock_ = true

[node name="MenuButton" type="Button" parent="MenuButtons/HBoxContainer"]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Menu"
metadata/_edit_lock_ = true

[node name="MenuOverlay" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -145.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("4_cx7qp")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="MenuOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.173, 0.173, 0.173, 0.65)

[node name="VBoxContainer" type="VBoxContainer" parent="MenuOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GuildButton" type="Button" parent="MenuOverlay/VBoxContainer"]
layout_mode = 2
text = "GUILD"

[node name="InventoryButton" type="Button" parent="MenuOverlay/VBoxContainer"]
layout_mode = 2
text = "INVENTORY"

[node name="SettingsButton" type="Button" parent="MenuOverlay/VBoxContainer"]
layout_mode = 2
text = "SETTINGS"

[node name="CloseButton" type="Button" parent="MenuOverlay/VBoxContainer"]
layout_mode = 2
text = "CLOSE"

[connection signal="pressed" from="MenuButtons/HBoxContainer/NotificationButton" to="." method="_on_notification_button_pressed"]
[connection signal="pressed" from="MenuButtons/HBoxContainer/MenuButton" to="." method="_on_overlay_menu_button_pressed"]
